# template

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitignore.expample  CMakeLists.txt  Makefile  main.cpp
.github/workflows/: ci.yaml  ci.yml
include/: project_template.hpp
src/: project_template.cpp
tests/: CMakeLists.txt  test_project_template.cpp
