set(CMAKE_CXX_STANDARD 20)

find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})

add_executable(test_project_template test_project_template.cpp)
target_link_libraries(test_project_template PRIVATE GTest::GTest GTest::Main)
add_test(NAME NameTest
         COMMAND test_project_template --gtest_color=yes --gtest_output=xml:${CMAKE_BINARY_DIR}/test-results/test_project_template.xml)
